# LibraryManagementSystem-C-

./: CMakeLists.txt  README.md
include/: Book.h  Library.h  Member.h
src/: Book.cpp  CMakeLists.txt  Library.cpp  Member.cpp  main.cpp
tests/: CMakeLists.txt  TestMain.cpp
